@@ -30,27 +30,27 @@ typedef struct
 // Parse a document, returns a potentially invalid document - use document_error to check
 // Must use document_free to release the memory (even if invalid).
 // The string must be nul terminated, e.g. slen != -1 ==> slen[0]
-document* document_parse(const char* s, int slen);
+document* hexml_document_parse(const char* s, int slen);
 
 // Free the memory returned from document_parse.
-void document_free(document* d);
+void hexml_document_free(document* d);
 
 // Generate a fresh string with the same semantics as the node.
 // Requires an input buffer, returns the size of the rendered document.
 // Requires the string passed to document_parse to be valid.
-int node_render(const document* d, const node* n, char* buffer, int length);
+int hexml_node_render(const document* d, const node* n, char* buffer, int length);
 
 // Return either NULL (successful parse) or the error message.
-char* document_error(const document* d);
+char* hexml_document_error(const document* d);
 
 // Return the root node of the document - imagine the document is wrapped in <>$DOC</> tags.
-node* document_node(const document* d);
+node* hexml_document_node(const document* d);
 
 // List all items within a node
-node* node_children(const document* d, const node* n, int* res);
-attr* node_attributes(const document* d, const node* n, int* res);
+node* hexml_node_children(const document* d, const node* n, int* res);
+attr* hexml_node_attributes(const document* d, const node* n, int* res);
 
 // Search for given strings within a node, note that prev may be NULL
 // Requires the string passed to document_parse to be valid.
-node* node_childBy(const document* d, const node* parent, const node* prev, const char* s, int slen);
-attr* node_attributeBy(const document* d, const node* n, const char* s, int slen);
+node* hexml_node_childBy(const document* d, const node* parent, const node* prev, const char* s, int slen);
+attr* hexml_node_attributeBy(const document* d, const node* n, const char* s, int slen);
